[aliases]
test = pytest

[metadata]
package = eph
description = Retrieve, represent and manipulate JPL Horizons ephemerides.
long_description =
author = Flavio Grandin
author_email = flavio.grandin@gmail.com
license = MIT
url = https://github.com/bluephlavio/eph
install_requires = astropy, requests
version = 0.2.0