[aliases]
test = pytest

[metadata]
package = eph
description = Retrieve, represent and manipulate JPL Horizons ephemerides.
year = 2019
author = Flavio Grandin
author_email = flavio.grandin@gmail.com
license = MIT
url = https://github.com/bluephlavio/eph
install_requires = astropy, requests, six
version = 1.0
release = 1.0.3
